--- a/css/style.css
+++ b/css/style.css
@@ -579,7 +579,7 @@ nav.sticky {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 4100px;
+  min-height: 2330px;
   border-radius: 30px;
 }
 
@@ -599,8 +599,8 @@ nav.sticky {
 
 .section-4-our-team .card {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 360px;
+  /* height: 300px; */
   /* margin: 20px; */
   overflow: hidden;
   box-shadow: 0 30px 30px -20px rgba(0, 0, 0, 1),
@@ -758,6 +758,18 @@ nav.sticky {
   margin: 0 70px 55px;
 }
 
+.slider-wrapper3 {
+  overflow: hidden;
+  max-width: 1200px;
+  margin: 0 70px 55px;
+}
+
+.slider-wrapper4 {
+  overflow: hidden;
+  max-width: 1200px;
+  margin: 0 70px 55px;
+}
+
 .swiper-pagination-bullet {
   background: linear-gradient(135deg, #0f8f98 0%, #42d680 60%);
   height: 10px !important;
@@ -776,6 +788,7 @@ nav.sticky {
 
 /* media responsive */
 @media (max-width: 768px) {
+  /* home page */
   .arrow {
     display: none;
   }
@@ -915,7 +928,9 @@ nav.sticky {
   }
   /* end footer */
 
-  /* pages about atau profik */
+  /* end Home page */
+
+  /* pages about atau profil */
   /* our values */
   .slider-wrapper {
     margin: 0 10px 40px;
@@ -924,5 +939,17 @@ nav.sticky {
   .swiper-slide-button {
     display: none;
   }
+
+  /* section 4 our team */
+  .section-4-our-team {
+    min-height: 2500px;
+  }
+
+  .section-4-our-team .card {
+    width: 319px;
+  }
+
+  /* end section3 our team */
+
   /* end our values */
 }
