--- a/css/style.css
+++ b/css/style.css
@@ -755,19 +755,19 @@ nav.sticky {
 .slider-wrapper2 {
   overflow: hidden;
   max-width: 1200px;
-  margin: 0 70px 55px;
+  margin: 0 55px 55px;
 }
 
 .slider-wrapper3 {
   overflow: hidden;
   max-width: 1200px;
-  margin: 0 70px 55px;
+  margin: 0 55px 55px;
 }
 
 .slider-wrapper4 {
   overflow: hidden;
   max-width: 1200px;
-  margin: 0 70px 55px;
+  margin: 0 55px 55px;
 }
 
 .swiper-pagination-bullet {
@@ -936,13 +936,19 @@ nav.sticky {
     margin: 0 10px 40px;
   }
 
+  .slider-wrapper3,
+  .slider-wrapper4,
+  .slider-wrapper2 {
+    margin: 0 15px 40px;
+  }
+
   .swiper-slide-button {
     display: none;
   }
 
   /* section 4 our team */
   .section-4-our-team {
-    min-height: 2500px;
+    min-height: 2750px;
   }
 
   .section-4-our-team .card {
